--- a/app/notec/package.json
+++ b/app/notec/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@types/node": "20.4.1",
-    "@types/react": "18.2.14",
+    "@types/react": "18.0.1",
     "@types/react-dom": "18.2.6",
+    "babel": "^6.23.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
+    "react-router-dom": "^6.14.1",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "css-loader": "1.0.0"
   }
 }
