--- a/app/notec/package.json
+++ b/app/notec/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.14.1",
+    "sass": "^1.63.6",
     "typescript": "5.1.6"
   },
   "devDependencies": {
