--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
-node_modules
+
+# Dependencies
+/node_modules
+
+# Build output
+/.next
+/app/notec/node_modules
+/server/node_modules
+
+
+
+# Environment variables
 .env
+.env.local
+
+# IDE and editor files
+/.vscode
+/.idea
+*.sublime-*
+*.swp
+.DS_Store
+
 dist/
