--- a/app/notec/package.json
+++ b/app/notec/package.json
@@ -24,10 +24,10 @@
     "@zeit/next-sass": "^1.0.1",
     "babel": "^6.23.0",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.9",
     "eslint": "^8.45.0",
     "eslint-config-next": "13.4.9",
     "fullcalendar": "^6.1.8",
-    "moment": "^2.29.4",
     "next": "13.4.9",
     "node-sass": "^9.0.0",
     "react": "18.2.0",
