--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
     "nodemon": "^3.0.1",
+    "rimraf": "^5.0.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
@@ -18,6 +19,7 @@
     "typescript": "^5.1.6"
   },
   "scripts": {
-    "dev": "nodemon server.ts"
+    "dev": "nodemon server.ts",
+    "build": "rimraf dist && tsc"
   }
 }
