--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,10 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "./server.ts",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
-  ]
+  "app": "server.ts",
+  "framework": "express",
+  "build": {
+    "target": "node16"
+  },
+  "scripts": {
+    "start": "node server.ts"
+  }
 }
