--- a/app/notec/package.json
+++ b/app/notec/package.json
@@ -25,6 +25,7 @@
     "babel": "^6.23.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
+    "dotenv": "^16.3.1",
     "eslint": "^8.45.0",
     "eslint-config-next": "13.4.9",
     "fullcalendar": "^6.1.8",
