--- a/app/notec/package.json
+++ b/app/notec/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.136",
     "@mui/material": "^5.14.0",
     "@mui/x-date-pickers": "^6.10.0",
+    "@types/next": "^9.0.0",
     "@types/node": "20.4.1",
     "@types/react": "18.0.1",
     "@types/react-dom": "18.2.6",
@@ -29,7 +30,7 @@
     "eslint": "^8.45.0",
     "eslint-config-next": "13.4.9",
     "fullcalendar": "^6.1.8",
-    "next": "13.4.9",
+    "next": "^13.4.12",
     "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
