Zustand and user store with auth provider

--- a/app/notec/.eslintrc.json
+++ b/app/notec/.eslintrc.json
@@ -15,6 +15,7 @@
   "rules": {
     "@typescript-eslint/no-var-requires": "off",
     "react/react-in-jsx-scope": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "warn"
   }
 }
