--- a/app/notec/package.json
+++ b/app/notec/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.45.0",
     "eslint-config-next": "13.4.9",
+    "firebase": "^10.1.0",
     "fullcalendar": "^6.1.8",
     "next": "^13.4.12",
     "node-sass": "^9.0.0",
@@ -38,7 +39,8 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.14.1",
     "sass": "^1.63.6",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
