--- a/app/notec/package.json
+++ b/app/notec/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.1",
     "sass": "^1.63.6",
     "typescript": "5.1.6",
