--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase-admin": "^11.10.1",
     "global": "^4.4.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
