--- a/app/notec/package.json
+++ b/app/notec/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "18.2.6",
     "@zeit/next-sass": "^1.0.1",
     "babel": "^6.23.0",
+    "chart.js": "^4.3.2",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
@@ -34,6 +35,7 @@
     "next": "^13.4.12",
     "node-sass": "^9.0.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
