--- a/app/notec/package.json
+++ b/app/notec/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.14.1",
+    "react-select": "^5.7.4",
     "sass": "^1.63.6",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
