--- a/app/notec/package.json
+++ b/app/notec/package.json
@@ -32,13 +32,16 @@
     "eslint-config-next": "13.4.9",
     "firebase": "^10.1.0",
     "fullcalendar": "^6.1.8",
+    "i18next": "^23.11.4",
     "next": "^13.4.12",
+    "next-i18next": "^15.3.0",
     "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^14.1.1",
     "react-router-dom": "^6.14.1",
     "react-select": "^5.7.4",
     "sass": "^1.63.6",
