--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 .env
 .env.local
 .vscode
+server/firebaseAdminSDK.json
 
 # IDE and editor files3
 ./vscode
@@ -24,3 +25,6 @@
 dist/
 
 db_dump
+
+sample_data
+
